search result page fix, last content was not visible

--- a/app/search/search.module.scss
+++ b/app/search/search.module.scss
@@ -3,6 +3,7 @@ $gridGap: 3.33%;
 $gridGapMobile: 1.5% 0;
 
 .search {
+  margin-bottom: 50vh;
   padding: 0.5rem;
   min-height: 100vh;
   display: flex;
@@ -17,6 +18,7 @@ $gridGapMobile: 1.5% 0;
 
   .result_wrapper {
     display: grid;
+    padding-bottom: 20vh;
     grid-auto-flow: row;
     grid-gap: $gridGapMobile;
     overflow: hidden;
